syntax = "proto3";

package gameapi;

message WorldStatus {
  int32 players = 1;
}